# elephc

./: .gitignore  AGENTS.md  BOOT_BEFORE_FORK_SPEC.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN_eir_codegen_bugs.md  Dockerfile.test-linux  Dockerfile.test-linux-arm64  Dockerfile.test-linux-x86_64  LICENSE  PR_BODY.md  README.md  ROADMAP.md  contacts.txt  rustfmt.toml  todos.txt
crates/elephc-crypto/: Cargo.toml
crates/elephc-crypto/src/: algos.rs  hmac.rs  lib.rs
crates/elephc-crypto/tests/: vectors.rs
crates/elephc-globals-audit/: .gitignore  Cargo.toml  microbench-results.md
crates/elephc-globals-audit/baseline/: linux-aarch64.toml  linux-x86_64.toml  macos-aarch64.toml
crates/elephc-globals-audit/microbench/: bench.c  bench.s  bench_linux_aarch64.s  bench_linux_x86_64.s  bench_xcompile.c
crates/elephc-globals-audit/src/: lib.rs  main.rs
crates/elephc-globals-audit/tests/: audit.rs
crates/elephc-image/: Cargo.toml
crates/elephc-image/src/: cairo.rs  codec.rs  draw.rs  exif.rs  exif_tags.rs  fbuf.rs  filter.rs  gd.rs  imagick.rs  imagick_draw.rs  imagick_ops.rs  iptc.rs  lib.rs  text.rs  transform.rs  xfer.rs
crates/elephc-image/src/cairo/: context.rs  mod.rs  pattern.rs  surface.rs
crates/elephc-image/tools/: README.md  api_spec.json  check_extern_exports.py  gen_image_api_stubs.py
crates/elephc-magician/: Cargo.toml  build.rs
crates/elephc-magician/src/: context.rs  errors.rs  eval_ir.rs  json_validate.rs  lib.rs  lower.rs  parse_cache.rs  scope.rs  stream_resources.rs  stream_wrappers.rs  strict_php_mode.rs  value.rs
crates/elephc-magician/src/context/: alias_metadata.rs  class_metadata.rs  classes_aliases.rs  classlike_objects.rs  closure_metadata.rs  core.rs  functions.rs  global_registry.rs  native_defaults.rs  native_function.rs  native_metadata.rs  native_signatures.rs  normalization.rs  reference_metadata.rs  reflection_registry.rs  runtime_state.rs
crates/elephc-magician/src/eval_ir/: attributes.rs  callable.rs  classes.rs  enums.rs  expressions.rs  interfaces.rs  methods.rs  program.rs  properties.rs  statements.rs  traits.rs
crates/elephc-magician/src/ffi/: callables.rs  context.rs  declared_symbols.rs  dynamic_destructors.rs  execute.rs  function_calls.rs  mod.rs  native_functions.rs  native_methods.rs  ob_handlers.rs  object_construction.rs  object_introspection.rs  scope.rs  static_members.rs  symbols.rs  tests.rs
crates/elephc-magician/src/ffi/native_functions/: public_abi.rs  registration.rs
crates/elephc-magician/src/ffi/native_methods/: attribute_decoder.rs  callable_metadata.rs  constructor_registration.rs  method_registration.rs  property_registration.rs  public_abi.rs
crates/elephc-magician/src/ffi/tests/: callable_defaults.rs  class_metadata.rs  context_symbols.rs  mod.rs  native_functions.rs  native_methods.rs  scope_execution.rs
crates/elephc-magician/src/interpreter/: array_literals.rs  builtin_interfaces.rs  builtin_metadata.rs  constant_eval.rs  constants.rs  control.rs  core_builtins.rs  debug_output.rs  dynamic_functions.rs  expressions.rs  include_exec.rs  json.rs  libc_shims.rs  mod.rs  output_handlers.rs  reflection.rs  return_type_compat.rs  return_values.rs  runtime_ops.rs  scope_cells.rs  statements.rs  throwables.rs
crates/elephc-magician/src/interpreter/builtins/: class_metadata.rs  hooks.rs  macros.rs  mod.rs  process_control.rs  random.rs  raw_memory.rs  ref_targets.rs  spec.rs  spl_autoload.rs  symbols.rs
crates/elephc-magician/src/interpreter/dynamic_functions/: closure_execution.rs  function_binding.rs  method_binding.rs  native_execution.rs
crates/elephc-magician/src/interpreter/expressions/: calls.rs  evaluation.rs
crates/elephc-magician/src/interpreter/reflection/: callable_api.rs  class_api.rs  class_construction.rs  class_lookup.rs  class_member_api.rs  constant_construction.rs  flags.rs  formatting.rs  function_construction.rs  function_metadata.rs  invocation.rs  member_api.rs  member_construction.rs  member_metadata.rs  owner_materialization.rs  parameter_construction.rs  parameter_metadata.rs  property_access.rs  property_helpers.rs
crates/elephc-magician/src/interpreter/statements/: abstract_requirements.rs  array_updates.rs  attributes_magic_validation.rs  callable_objects.rs  class_declarations.rs  class_resolution.rs  closure_binding.rs  dispatch.rs  dynamic_method_execution.rs  enum_declarations.rs  exceptions.rs  instance_property_access.rs  interface_contracts.rs  interface_member_validation.rs  loop_statements.rs  method_dispatch.rs  native_argument_binding.rs  native_constructor_defaults.rs  native_method_execution.rs  native_static_dispatch.rs  property_constant_validation.rs  property_validation.rs  reference_writeback.rs  reflection_instantiation.rs  static_method_dispatch.rs  (+2 more)
crates/elephc-magician/src/lexer/: mod.rs  scan.rs  token.rs
crates/elephc-magician/src/parser/: cursor.rs  expressions.rs  mod.rs  state.rs  statements.rs
crates/elephc-magician/src/runtime_hooks/: externs.rs  mod.rs  ops.rs  tags.rs
crates/elephc-magician/src/scope/: tests.rs
crates/elephc-magician/src/stream_resources/: file_process_opening.rs  operations.rs  resource_registration.rs  sockets.rs  storage.rs  types.rs
crates/elephc-pdo/: Cargo.toml  build.rs
crates/elephc-pdo/src/: cubrid.rs  dblib.rs  driver.rs  firebird.rs  ini.rs  lib.rs  my.rs  oci.rs  odbc.rs  pg.rs  pg_libpq.rs  sqlite.rs
crates/elephc-phar/: Cargo.toml
crates/elephc-phar/src/: lib.rs
crates/elephc-tls/: Cargo.toml
crates/elephc-tls/src/: lib.rs
crates/elephc-tz/: Cargo.toml
crates/elephc-tz/data/: abbreviations.data  generate.php  location.data  transitions.data
crates/elephc-tz/src/: abi.rs  lib.rs
crates/elephc-web/: Cargo.toml
crates/elephc-web/src/: affinity.rs  dispatch.rs  handler.rs  lib.rs  metrics.rs  multipart.rs  offload.rs  request_state.rs  rss.rs  server.rs  session.rs  static_asset.rs  tls.rs  trans_sid.rs  worker.rs  worker_mode.rs
crates/elephc-web/src/session/: file_io.rs  id.rs  mod.rs  state.rs  upload_progress.rs  wire_format.rs
(+6436 files in other folders)
