[package]
name = "elephc"
version = "0.26.0"
edition = "2021"
default-run = "elephc"
description = "A PHP-to-native AOT compiler"
license = "MIT"
repository = "https://github.com/illegalstudio/elephc"
homepage = "https://github.com/illegalstudio/elephc"
readme = "README.md"
keywords = ["php", "compiler", "aot", "native", "codegen"]
categories = ["compilers", "command-line-utilities"]

# The bridge staticlibs are default workspace members so plain `cargo build` /
# `cargo test` materialize libelephc_tls.a (https:// wrapper),
# libelephc_pdo.a (PDO: SQLite + PostgreSQL), libelephc_crypto.a
# (hash/HMAC family), libelephc_phar.a (runtime phar:// archive reads),
# libelephc_tz.a (DateTimeZone introspection: getLocation/getTransitions/
# listAbbreviations), libelephc_image.a (GD/Exif/Imagick/Gmagick/Cairo), and
# libelephc_web.a (--web prefork HTTP server) into target/<profile>/, where
# linker.rs locates them for programs that use those features.
[workspace]
members = [".", "crates/elephc-tls", "crates/elephc-pdo", "crates/elephc-crypto", "crates/elephc-phar", "crates/elephc-tz", "crates/elephc-image", "crates/elephc-web"]
default-members = [".", "crates/elephc-tls", "crates/elephc-pdo", "crates/elephc-crypto", "crates/elephc-phar", "crates/elephc-tz", "crates/elephc-image", "crates/elephc-web"]
resolver = "2"

[[bin]]
name = "elephc"
path = "src/main.rs"

[[bin]]
name = "gen_builtins"
path = "src/bin/gen_builtins.rs"

[dependencies]
inventory = "0.3"
# Grows the stack on demand inside the recursive-descent parser so deeply
# nested expressions never overflow small (2 MiB test-thread) stacks.
stacker = "0.1"
bitflags = "2"
serde_json = "1"
# flate2 (default miniz_oxide backend = pure Rust, no system zlib) is used by the
# compiler to inflate raw-DEFLATE phar:// entries at compile time. Decompress-only.
flate2 = "1"
# bzip2-rs is a PURE-RUST bzip2 decoder (no system libbz2, no C toolchain) used by
# the compiler to decompress bzip2 phar:// entries at compile time. Decompress-only.
bzip2-rs = "0.1"
elephc-phar = { path = "crates/elephc-phar" }

# Bridge crates are runtime staticlibs, not used by the Rust compiler itself,
# but codegen tests link their libelephc_*.a artifacts into compiled PHP
# programs. They ship as dev-dependencies so `cargo test` / `cargo nextest run`
# build them automatically. Without this, staticlibs are only built by `cargo
# build` of the default-members, which a sharded nextest run does not perform.
[dev-dependencies]
elephc-tls = { path = "crates/elephc-tls" }
elephc-pdo = { path = "crates/elephc-pdo" }
elephc-crypto = { path = "crates/elephc-crypto" }
elephc-phar = { path = "crates/elephc-phar" }
elephc-tz = { path = "crates/elephc-tz" }
elephc-image = { path = "crates/elephc-image" }
elephc-web = { path = "crates/elephc-web" }
# flate2 lets the phar:// codegen tests build gzip (raw-DEFLATE) fixture entries
# with the same encoder the compiler decodes, guaranteeing a version-stable
# round-trip without shelling out to php.
flate2 = "1"
# The streams codegen tests host a local HTTPS fixture so https:// wrapper
# success coverage does not depend on outbound network access.
rustls = { version = "0.23", default-features = false, features = ["std", "ring", "tls12"] }
rustls-pemfile = "2"

[features]
# Keeps the codegen test package and its PDO dev-dependency on the same libpq
# backend profile. Without this relay, a later `cargo test` can rebuild and
# replace the feature-built staticlib with the pure-Rust default archive.
pdo-libpq-gss = ["elephc-pdo/libpq-gss"]
# Keeps codegen fixtures and the PDO archive on the FreeTDS-backed PDO_DBLIB profile.
pdo-dblib = ["elephc-pdo/dblib"]

# PDO needs two mysql client controls that upstream 28.0.0 does not expose:
# caller-supplied authentication RSA keys and rustls cipher-suite selection.
# Keep the small audited patch in-tree until those options land upstream.
[patch.crates-io]
mysql = { path = "vendor/mysql-28.0.0" }

# Local test-speed tuning. The dev profile (which `test` inherits) keeps full
# `debug = 2` info by default, which inflates both rustc codegen and the link of
# the six test binaries. `line-tables-only` keeps file:line in panic backtraces
# (so test failures stay legible) while cutting the debug info the assembler and
# linker chew through on every edit -> `cargo test` cycle.
[profile.dev]
debug = "line-tables-only"
