[package]
name = "elephc-pdo"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Multi-driver database bridge staticlib (SQLite + PostgreSQL) for the elephc PHP-to-native compiler's PDO support"

# Built as both a C-callable staticlib (linked into compiled PHP programs that
# use PDO) and an rlib (so the bridge can be unit-tested from Rust via
# `cargo test -p elephc-pdo`). Mirrors crates/elephc-tls.
[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
# `bundled` compiles the SQLite amalgamation into the staticlib, so compiled
# PHP binaries stay standalone (no system -lsqlite3 runtime dependency). Cost:
# a C compile of sqlite at crate build time (cc is already required to build
# elephc's runtime objects).
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
# The synchronous, pure-Rust PostgreSQL client (no system libpq), so compiled
# PHP binaries stay standalone. Connects to a running PostgreSQL server over
# TCP/Unix sockets when a `pgsql:` DSN is opened. The `with-*` features add the
# FromSql decoders for date/time, json, and uuid columns so the driver can read
# those types back as their PHP-string representation.
tokio-postgres = { version = "0.7", features = [
    "with-chrono-0_4",
    "with-serde_json-1",
    "with-uuid-1",
] }
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
futures-util = { version = "0.3", features = ["sink"] }
bytes = "1"
whoami = "2"
libpq = { version = "5.0.1", features = ["v12"], optional = true }
# Type crates named directly in the column decoder (the postgres features above
# only wire up the FromSql impls). rust_decimal's `db-postgres` feature adds the
# numeric/decimal FromSql impl (postgres has no built-in one).
chrono = "0.4"
serde_json = "1"
uuid = "1"
rust_decimal = { version = "1", features = ["db-postgres"] }
# The synchronous, pure-Rust MySQL/MariaDB client. `default-features = false` with
# `minimal-rust` drops the optional TLS backends and selects flate2's pure-Rust
# (miniz_oxide) deflate backend instead of the C `zlib` one, so the staticlib has
# no `libz` dependency and compiled PHP binaries stay fully standalone (no system
# DB client, no `-lz`) while keeping the binary wire protocol and prepared
# statements this driver needs. mysql 28 exposes a ring-backed rustls feature, so
# TLS no longer needs aws-lc-rs or a C/asm crypto toolchain.
mysql = { version = "28", default-features = false, features = ["minimal-rust"] }
# --- TLS (gated by the `tls` / `mysql-tls` features below) ---
# PostgreSQL TLS uses rustls with the RING crypto provider ONLY (no aws-lc-rs),
# mirroring crates/elephc-tls so the musl/Docker images and standalone binaries
# stay free of the aws-lc C/asm toolchain prerequisites. tokio-postgres-rustls
# exposes a `ring` feature, so `default-features = false` keeps aws-lc-rs out.
tokio-postgres-rustls = { version = "0.14", default-features = false, features = [
    "ring",
], optional = true }
# The pg connector's rustls ClientConfig is built explicitly with the ring
# provider (ClientConfig::builder_with_provider), so the pg path never consults a
# process-global default provider. `std`/`tls12` mirror elephc-tls.
rustls = { version = "0.23", default-features = false, features = [
    "ring",
    "std",
    "tls12",
], optional = true }
# Default trust roots for pg verification when no custom `sslrootcert` is given.
webpki-roots = { version = "0.26", optional = true }
# Parses a custom `sslrootcert`/client-cert PEM into the pg rustls config.
rustls-pemfile = { version = "2", optional = true }

[features]
# TLS is ON by default, but the default `tls` feature covers PostgreSQL ONLY and
# is aws-lc-rs-free (ring): a `pgsql:` DSN with `sslmode=require`/`verify-full`
# works out of the box against managed Postgres (Supabase/Neon/RDS/Timescale).
# mysql 28's `rustls-tls-ring` keeps the MySQL path on the same provider as
# PostgreSQL and elephc-tls, so both database TLS backends are enabled by default
# without introducing aws-lc-rs. A minimal `--no-default-features` build keeps the
# historical NoTls behavior for both.
default = ["tls", "mysql-tls"]
tls = ["dep:tokio-postgres-rustls", "dep:rustls", "dep:webpki-roots", "dep:rustls-pemfile"]
mysql-tls = ["tls", "mysql/rustls-tls-ring"]
libpq-gss = ["dep:libpq"]
# Matches php-src's PDO_DBLIB backend by linking the system FreeTDS DB-Library.
# The default bridge remains system-client-free; final binaries using this
# profile must also link `libsybdb`.
dblib = []
