[package]
name = "elephc-web"
version = "0.1.0"
edition = "2021"
description = "Prefork HTTP server staticlib for the elephc --web flag (hyper + tokio)."
license = "MIT"
publish = false

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
# hyper 1.x is the HTTP engine; http carries the Request/Response types. The
# `http2` feature is compiled in once and gated at runtime by the `--http2`
# flag: when off, `auto::Builder::http1_only()` keeps the hot path on the h1
# parser (byte-for-byte with the previous `http1::Builder` path), so the h2
# framing code never runs on a connection that did not opt in.
hyper = { version = "1", features = ["server", "http1", "http2"] }
http = "1"
http-body-util = "0.1"
# `server-auto` pulls the auto-negotiating builder (h1/h2 on one socket via the
# `PRI * HTTP/2.0` prior-knowledge preface); `http1`/`http2` are listed
# explicitly to document the intent (server-auto already enables both).
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "http1", "http2"] }
# tokio current-thread runtime only: each prefork worker runs single-threaded,
# so PHP execution (a blocking call) never overlaps within a worker.
tokio = { version = "1", default-features = false, features = ["net", "rt", "io-util", "sync", "time"] }
# socket2 sets SO_REUSEPORT before bind so N workers share one port and the
# kernel load-balances connections across them.
socket2 = { version = "0.5", features = ["all"] }
# libc: fork/waitpid/signals for the prefork master, kept default-features for
# musl-compatibility on the Docker Linux images.
libc = "0.2"
# flate2: optional gzip response compression (--gzip). Already in the workspace
# dependency tree, so this adds no new external crate.
flate2 = "1"
# TLS termination (--tls-cert/--tls-key). rustls 0.23 with the ring provider and
# default-features = false matches the elephc-tls client crate EXACTLY, so the
# whole workspace pins one rustls/provider (musl-friendly for the Docker Linux
# test images; never pulls the heavier aws-lc-rs). tokio-rustls 0.26 is the
# tokio-aligned wrapper for the same rustls line; rustls-pemfile parses the
# operator-supplied PEM cert chain + private key.
rustls = { version = "0.23", default-features = false, features = ["std", "ring", "tls12"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
rustls-pemfile = "2"

[dev-dependencies]
# rcgen generates a self-signed cert+key at RUNTIME for the tls.rs unit tests, so
# no certificate/key material is ever committed. Ring backend only (no aws-lc-rs),
# matching the runtime crypto provider and staying musl-friendly.
rcgen = { version = "0.13", default-features = false, features = ["ring", "pem"] }
# h2 drives the HTTP/2 prior-knowledge test client in `tests/web_tests.rs`. It
# is a TEST-ONLY dependency (never linked into the produced `--web` binary):
# the production runtime speaks h2 via hyper's built-in `http2` feature, with
# no direct `h2` runtime dep. Pinned to the 0.4 line to match the h2 version
# hyper 1.x itself uses for its server, so the test client and the server
# share one HPACK/frame implementation.
h2 = "0.4"
# The h2 test client is async; run it on a current-thread tokio runtime inside
# the test binary (no multi-thread needed). `macros` for the `#[tokio::test]`
# attribute used by the h2 test helpers; `net`/`time` for connect + timeouts.
tokio = { version = "1", default-features = false, features = ["rt", "macros", "net", "time"] }
# `bytes` and `http` for building h2 request frames in the test client.
bytes = "1"
http = "1"
